--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,50 @@ logs
 .env
 .env.*
 !.env.example
+
+
+# ------------- Python -------------
+
+# cache
+__pycache__/
+*.py[cod]
+*$py.class
+
+# Distribution / packaging
+dist/
+build/
+*.egg-info/
+*.egg
+
+# Virtual environments
+venv/
+env/
+.venv/
+ENV/
+env.bak/
+venv.bak/
+
+# Testing
+.pytest_cache/
+.coverage
+htmlcov/
+
+# Jupyter Notebook
+.ipynb_checkpoints
+
+# IPython
+profile_default/
+ipython_config.py
+
+# mypy
+.mypy_cache/
+
+# pytype
+.pytype/
+
+# Rope project settings
+.ropeproject/
+
+# Spyder project settings
+.spyderproject
+.spyproject
