--- a/scripts/config.json
+++ b/scripts/config.json
@@ -18,7 +18,7 @@
     "range_ip_teams": 29,
     "format_ip_teams": "10.10.{}.1",
     "my_team_ip": "10.10.0.1",
-    "regex_flag": "^[A-Z0-9]{31}=$"
+    "regex_flag": "[A-Z0-9]{31}="
   },
   "configured": true
 }
